distribution-flux/ingress-controller/svc-webapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingresscontroller-webapp
spec:
  selector:
    app: ingresscontroller-webapp
  ports:
    - port: 80
